--- a/configs/emacs.d/init.org
+++ b/configs/emacs.d/init.org
@@ -117,7 +117,7 @@ Extensible Vi layer for Emacs.
 Source: [[https://github.com/emacs-evil/evil]]
 #+BEGIN_SRC emacs-lisp :tangle ~/.emacs.d/init.el
 (use-package evil
-  :disabled t
+  :mode text-mode
   :diminish
   :config
   (evil-define-key 'normal global-map (kbd "gh") 'evil-first-non-blank)
@@ -126,6 +126,72 @@ Source: [[https://github.com/emacs-evil/evil]]
   (setq evil-magic 'very-magic)
   (remove 'doc-view-mode evil-emacs-state-modes)
   (evil-mode 1))
+#+END_SRC
+*** evil-escape
+#+BEGIN_QUOTE
+Escape from anything with a customizable key sequence
+#+END_QUOTE
+Source: [[https://github.com/syl20bnr/evil-escape]]
+#+BEGIN_SRC emacs-lisp :tangle ~/.emacs.d/init.el
+(use-package evil-escape
+  :diminish
+  :after evil
+  :config
+  (setq-default evil-escape-key-sequence "jk")
+  (setq evil-escape-unordered-key-sequence 1)
+  (evil-escape-mode 1))
+#+END_SRC
+*** evil-leader
+#+BEGIN_QUOTE
+let there be <leader>
+#+END_QUOTE
+Source: [[https://github.com/cofi/evil-leader]]
+#+BEGIN_SRC emacs-lisp :tangle ~/.emacs.d/init.el
+(use-package evil-leader
+  :disabled t
+  :diminish
+  :config
+  (evil-leader/set-leader ",")
+  (evil-leader/set-key
+	","  'other-window
+	"/"  'helm-swoop
+	"."  'mode-line-other-buffer
+	":"  'eval-expression
+	"aa" 'align-regexp
+	"a=" 'my-align-single-equals
+	"b"  'helm-mini             ;; Switch to another buffer
+	"B"  'magit-blame-toggle
+	"c"  'evil-commentary
+	;; Add evil nerd commentary
+	"d"  'kill-this-buffer
+	"D"  'open-current-line-in-codebase-search
+	"e"  'evil-exchange
+	"f"  'helm-imenu            ;; Jump to function in buffer
+	"g"  'magit-status
+	"h"  'git-timemachine       ;; Open git timemachine
+	"il" 'benchmark-init/show-durations-tabulated
+	"it" 'benchmark-init/show-durations-tree
+	"it" 'benchmark-init/show-durations-tree
+	"is" 'tabulated-list-sort
+	"l"  'whitespace-mode       ;; Show invisible characters
+	"nn" 'air-narrow-dwim       ;; Narrow to region and enter normal mode
+	"nw" 'widen
+	"o"  'delete-other-windows  ;; C-w o
+	"p"  'helm-show-kill-ring
+	"Pp"  'helm-projectile-switch-project
+	"Pf"  'helm-projectile-find-file
+	"s"  'ag-project            ;; Ag search from project's root
+	"r"  (lambda () (interactive) (revert-buffer :ignore-auto :noconfirm))
+	"R"  'restart-emacs
+	"S"  'delete-trailing-whitespace
+	"t"  'gtags-reindex
+	"T"  'gtags-find-tag
+	"u"  'undo-tree-visualize
+	"v"  'centered-cursor-mode
+	"w"  'save-buffer
+	"x"  'helm-M-x
+	"y"  'yank-to-x-clipboard)
+  (global-evil-leader-mode))
 #+END_SRC
 *** evil-anzu
 #+BEGIN_QUOTE
@@ -199,21 +265,6 @@ Source: [[https://github.com/emacs-evil/evil-ediff]]
   :init
   (add-hook 'ediff-mode-hook 'evil-ediff-init))
 #+END_SRC
-*** evil-escape
-#+BEGIN_QUOTE
-Escape from anything with a customizable key sequence
-#+END_QUOTE
-Source: [[https://github.com/syl20bnr/evil-escape]]
-#+BEGIN_SRC emacs-lisp :tangle ~/.emacs.d/init.el
-(use-package evil-escape
-  :disabled t
-  :diminish
-  :after evil
-  :config
-  (setq-default evil-escape-key-sequence "jk")
-  (setq evil-escape-unordered-key-sequence 1)
-  (evil-escape-mode 1))
-#+END_SRC
 *** evil-exchange
 #+BEGIN_QUOTE
 Exchange text more easily within Evil
@@ -261,59 +312,6 @@ Source: [[https://github.com/TheBB/evil-indent-plus]]
   :after evil
   :config
   (evil-indent-plus-default-bindings))
-#+END_SRC
-*** evil-leader
-#+BEGIN_QUOTE
-let there be <leader>
-#+END_QUOTE
-Source: [[https://github.com/cofi/evil-leader]]
-#+BEGIN_SRC emacs-lisp :tangle ~/.emacs.d/init.el
-(use-package evil-leader
-  :disabled t
-  :diminish
-  :after evil
-  :config
-  (evil-leader/set-leader ",")
-  (evil-leader/set-key
-	","  'other-window
-	"/"  'helm-swoop
-	"."  'mode-line-other-buffer
-	":"  'eval-expression
-	"aa" 'align-regexp
-	"a=" 'my-align-single-equals
-	"b"  'helm-mini             ;; Switch to another buffer
-	"B"  'magit-blame-toggle
-	"c"  'evil-commentary
-	;; Add evil nerd commentary
-	"d"  'kill-this-buffer
-	"D"  'open-current-line-in-codebase-search
-	"e"  'evil-exchange
-	"f"  'helm-imenu            ;; Jump to function in buffer
-	"g"  'magit-status
-	"h"  'git-timemachine       ;; Open git timemachine
-	"il" 'benchmark-init/show-durations-tabulated
-	"it" 'benchmark-init/show-durations-tree
-	"it" 'benchmark-init/show-durations-tree
-	"is" 'tabulated-list-sort
-	"l"  'whitespace-mode       ;; Show invisible characters
-	"nn" 'air-narrow-dwim       ;; Narrow to region and enter normal mode
-	"nw" 'widen
-	"o"  'delete-other-windows  ;; C-w o
-	"p"  'helm-show-kill-ring
-	"Pp"  'helm-projectile-switch-project
-	"Pf"  'helm-projectile-find-file
-	"s"  'ag-project            ;; Ag search from project's root
-	"r"  (lambda () (interactive) (revert-buffer :ignore-auto :noconfirm))
-	"R"  'restart-emacs
-	"S"  'delete-trailing-whitespace
-	"t"  'gtags-reindex
-	"T"  'gtags-find-tag
-	"u"  'undo-tree-visualize
-	"v"  'centered-cursor-mode
-	"w"  'save-buffer
-	"x"  'helm-M-x
-	"y"  'yank-to-x-clipboard)
-  (global-evil-leader-mode))
 #+END_SRC
 *** evil-lisp-state
 #+BEGIN_QUOTE
