--- a/configs/emacs.d/init.org
+++ b/configs/emacs.d/init.org
@@ -68,6 +68,7 @@ Download and require use package
 Enable ensure for everything
 #+BEGIN_SRC emacs-lisp :tangle ~/.emacs.d/init.el
 (setq use-package-always-ensure t)
+(setq use-package-compute-statistics t)
 #+END_SRC
 ** Libraries
 *** dash
