--- a/configs/emacs.d/init.org
+++ b/configs/emacs.d/init.org
@@ -225,7 +225,7 @@ Source: [[https://github.com/emacs-evil/evil-magit]]
 #+BEGIN_SRC emacs-lisp :tangle ~/.emacs.d/init.el
 (use-package evil-magit
   :diminish
-  :after evil
+  :after (evil magit)
   :init
   (add-hook 'magit-mode-hook 'evil-local-mode))
 #+END_SRC
