--- a/configs/emacs.d/init.org
+++ b/configs/emacs.d/init.org
@@ -280,13 +280,13 @@ Motions and text objects for delimited arguments in Evil.
 Source: [[https://github.com/wcsmith/evil-args]]
 #+BEGIN_SRC emacs-lisp 
 (use-package evil-args
-  :disabled t
   :diminish
+  :commands (evil-inner-arg evil-outer-arg)
   :after evil
-  :config
+  :init
   ;; bind evil-args text objects
   (define-key evil-inner-text-objects-map "a" 'evil-inner-arg)
-  (define-key evil-outer-text-objects-map "A" 'evil-outer-arg))
+  (define-key evil-outer-text-objects-map "a" 'evil-outer-arg))
 #+END_SRC
 
 *** evil-cleverparens
