--- a/configs/emacs.d/init.org
+++ b/configs/emacs.d/init.org
@@ -1722,8 +1722,8 @@ cursor stays vertically centered
 Source: [[https://github.com/andre-r/centered-cursor-mode.el]]
 #+BEGIN_SRC emacs-lisp 
 (use-package centered-cursor-mode
-  :commands 'centered-cursor-mode
   :diminish
+  :defer 1
   :config
   (global-centered-cursor-mode))
 #+END_SRC
