--- a/configs/emacs.d/init.org
+++ b/configs/emacs.d/init.org
@@ -315,8 +315,9 @@ Comment stuff out. A port of vim-commentary.
 Source: [[https://github.com/linktohack/evil-commentary]]
 #+BEGIN_SRC emacs-lisp 
 (use-package evil-commentary
-  :disabled t
   :diminish
+  :bind (:map evil-normal-state-local-map
+  ("gc" . evil-commentary))
   :after evil
   :config
   (evil-commentary-mode 1))
