Attempted to enable evil-visualstar, didn't work

--- a/configs/emacs.d/init.org
+++ b/configs/emacs.d/init.org
@@ -538,6 +538,7 @@ Source: [[https://github.com/bling/evil-visualstar]]
 (use-package evil-visualstar
   :disabled t
   :diminish
+  :bind ("<visual-state> *" . evil-visualstar/begin-search-forward)
   :after evil
   :config
   (global-evil-visualstar-mode 1))
