--- a/configs/emacs.d/init.org
+++ b/configs/emacs.d/init.org
@@ -188,6 +188,8 @@ Source: [[https://github.com/cofi/evil-leader]]
 	"/"  'helm-swoop
 	"."  'mode-line-other-buffer
 	":"  'eval-expression
+	"'"  'use-package-report
+  "*"  'google-this
 	"b"  'helm-mini             ;; Switch to another buffer
 	"c"  'evil-commentary
 	;; Add evil nerd commentary
@@ -197,8 +199,8 @@ Source: [[https://github.com/cofi/evil-leader]]
 	"f"  'helm-imenu            ;; Jump to function in buffer
 	"g"  'magit-status
 	"h"  'git-timemachine       ;; Open git timemachine
-	"i"  'use-package-report
-	"l"  'whitespace-mode       ;; Show invisible characters
+  "l"  'helm-google
+	"'"  'whitespace-mode       ;; Show invisible characters
 	"nn" 'air-narrow-dwim       ;; Narrow to region and enter normal mode
 	"nw" 'widen
 	"o"  'delete-other-windows  ;; C-w o
@@ -768,7 +770,7 @@ Emacs Helm Interface for quick Google searches
 Source: [[https://framagit.org/steckerhalter/helm-google]]
 #+BEGIN_SRC emacs-lisp 
 (use-package helm-google
-  :disabled t
+  
   :diminish
   :after helm)
 #+END_SRC
@@ -1923,7 +1925,7 @@ A set of functions and bindings to google under point.
 Source: [[https://github.com/Malabarba/emacs-google-this]]
 #+BEGIN_SRC emacs-lisp 
 (use-package google-this
-  :disabled t
+  :commands 'google-this
   :diminish)
 #+END_SRC
 
