--- a/configs/emacs.d/init.org
+++ b/configs/emacs.d/init.org
@@ -188,7 +188,7 @@ Source: [[https://github.com/cofi/evil-leader]]
 	"/"  'helm-swoop
 	"."  'mode-line-other-buffer
 	":"  'eval-expression
-	"'"  'use-package-report
+  "'"  'whitespace-mode
   "*"  'google-this
 	"b"  'helm-mini             ;; Switch to another buffer
 	"c"  'evil-commentary
@@ -199,6 +199,7 @@ Source: [[https://github.com/cofi/evil-leader]]
 	"f"  'helm-imenu            ;; Jump to function in buffer
 	"g"  'magit-status
 	"h"  'git-timemachine       ;; Open git timemachine
+	"i"  'use-package-report
   "l"  'helm-google
 	"'"  'whitespace-mode       ;; Show invisible characters
 	"nn" 'air-narrow-dwim       ;; Narrow to region and enter normal mode
