--- a/configs/emacs.d/init.org
+++ b/configs/emacs.d/init.org
@@ -189,7 +189,7 @@ Source: [[https://github.com/cofi/evil-leader]]
   "'"  'whitespace-mode
   "*"  'google-this
 	"b"  'helm-mini             ;; Switch to another buffer
-	"c"  'evil-commentary
+	"c"  'helm-flycheck
 	;; Add evil nerd commentary
 	"d"  'kill-this-buffer
 	"D"  'open-current-line-in-codebase-search
@@ -1026,7 +1026,7 @@ On-the-fly syntax checking
 Source: [[https://github.com/flycheck/flycheck]]
 #+BEGIN_SRC emacs-lisp 
 (use-package flycheck
-  :disabled t
+  :defer 15
   :diminish
   :config
   (global-flycheck-mode 1))
@@ -1053,7 +1053,7 @@ Show flycheck errors with helm
 Source: [[https://github.com/yasuyk/helm-flycheck]]
 #+BEGIN_SRC emacs-lisp 
 (use-package helm-flycheck
-  :disabled t
+  :commands 'helm-flycheck
   :diminish
   :after flycheck)
 #+END_SRC
