Updated helm-flycheck to not require flycheck to be loaded first

--- a/configs/emacs.d/init.org
+++ b/configs/emacs.d/init.org
@@ -1054,8 +1054,7 @@ Source: [[https://github.com/yasuyk/helm-flycheck]]
 #+BEGIN_SRC emacs-lisp 
 (use-package helm-flycheck
   :commands 'helm-flycheck
-  :diminish
-  :after flycheck)
+  :diminish)
 #+END_SRC
 
 *** flyspell
