--- a/configs/emacs.d/init.org
+++ b/configs/emacs.d/init.org
@@ -1219,8 +1219,8 @@ Unobtrusively remove trailing whitespace.
 Source: [[https://github.com/lewang/ws-butler]]
 #+BEGIN_SRC emacs-lisp 
 (use-package ws-butler
-  :disabled t
   :diminish
+  :defer 5
   :config
   (ws-butler-global-mode 1))
 #+END_SRC
