--- a/configs/emacs.d/init.org
+++ b/configs/emacs.d/init.org
@@ -1095,8 +1095,8 @@ Minor mode to aggressively keep your code always indented
 Source: [[https://github.com/Malabarba/aggressive-indent-mode]]
 #+BEGIN_SRC emacs-lisp 
 (use-package aggressive-indent
-  :disabled t
   :diminish
+  :defer 5
   :config
   (aggressive-indent-global-mode 1))
 #+END_SRC
