--- a/configs/emacs.d/init.org
+++ b/configs/emacs.d/init.org
@@ -188,6 +188,7 @@ Source: [[https://github.com/cofi/evil-leader]]
 	":"  'eval-expression
   "'"  'whitespace-mode
   "*"  'google-this
+  "a"  'ace-link
 	"b"  'helm-mini             ;; Switch to another buffer
 	"c"  'helm-flycheck
 	;; Add evil nerd commentary
@@ -1256,7 +1257,7 @@ Quickly follow links
 Source: [[https://github.com/abo-abo/ace-link]]
 #+BEGIN_SRC emacs-lisp 
 (use-package ace-link
-  :disabled t
+:commands 'ace-link
   :diminish)
 #+END_SRC
 
